update Jochen Joswig github

--- a/src/content/champions/jochen-joswig.yaml
+++ b/src/content/champions/jochen-joswig.yaml
@@ -12,7 +12,7 @@ city: Hamburg
 bio: I studied in San Francisco (USA), Jena (Germany) and Hamburg (Germany). During my studies, I realized the enormous potential of software and ICT to solve even the toughest of challenges. Since 2020, I became captivated by two questions. 1. How can software be applied to solve various sustainability issues? 2. How can one make software itself sustainable? The latter is especially interesting to me since I am myself a Software Developer. Therefore, I have become a founding member of the Green Software Manifesto (www.greenmanifesto.de) and I am researching and sharing ideas related to Green Software.
 type: normal
 social:
-  github: by-d-sign
+  github: all-green-dev
   linkedin: jochen-joswig
 activities:
   - contributionType: speaking
