--- a/src/content/champions/john-behan.yaml
+++ b/src/content/champions/john-behan.yaml
@@ -21,7 +21,7 @@ activities:
     dateTo: 2024-10-08
     title: Green Software Foundation Dublin Summit hosted by Mastercard
     subtitle: Part of GSF Global Summit 2024
-    description: "Talk on "Practical Green Software Strategies for Startups: Our code shouldn't cost the earth". This talk outlined strategies for implementing a Green Software project within an organisation. Linked strategies to my own practical experience at a scale up."
+    description: "Talk on \"Practical Green Software Strategies for Startups: Our code shouldn't cost the earth\". This talk outlined strategies for implementing a Green Software project within an organisation. Linked strategies to my own practical experience at a scale up."
     url: https://summit24.greensoftware.foundation/
   - contributionType: organizing
     linkedGSFProject: GSF Meetup Network
